--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,7 @@
 title: Fairy tales of San Francisco <З
 email: karmelalla@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-    Этот блог появился в первую очередь для меня самой. Как практика- помнить и осознавать себя, каждый бесценный день своей жизни.
-    Во-вторых, для родных. Чтобы они могли лучше следить за происходящим. Хоть немного прочувствовать наши впечатления и переживания.
-    Ну и конечно, для друзей и всех тех, кому будет интересно следить за нашими сказочными приключениями.
-    Пожалуйста, не судите строго. Это всего лишь мои заметки. Если вам понравится- я буду рада.
-    Читайте с удовольствием.
+    Спасибо вам за уделенное время. Надеюсь вам понравилось =)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
