--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: > # this means to ignore newlines until "baseurl:"
     Спасибо за уделенное время. Надеюсь, вам понравилось! =)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+facebook_username: karmelalla
+instagram_username: karmelalla
 
 # Build settings
 markdown: kramdown
