--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,11 @@ excerpt_separator: "<!--separate-->"
 disqus:
   shortname: lostdream-ru
 domain: "http://karmelalla.com"
+mail_subject: "Новый пост на karmelalla.com:"
+mail_intro: "Привет! <br><br>На моем сайте вышел новый пост:"
+mail_read_more: "читать далее..."
+mail_closing: "Пожалуйста, оставляйте свои комментарии под постом. Мне будет очень приятно! <br><br>Алла"
+
 paginate: 10
 image_width: 300 
-image_quality: 85
+image_quality: 80
