--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Fairy tales of San Francisco
+author: Alla Isakova
+title: Fairy tales of San Francisco &hearts;
 email: karmelalla@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     Спасибо за уделенное время. Надеюсь, вам понравилось! =)
