--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 author: Alla Isakova
 title: Fairy tales of San Francisco &hearts;
 email: karmelalla@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-    Спасибо за уделенное время. Надеюсь, вам понравилось! =)
+# description: > # this means to ignore newlines until "baseurl:"
+#     Спасибо за уделенное время. Надеюсь, вам понравилось! =)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 facebook_username: karmelalla
