--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ exclude:
 
 # Email settings
 domain: "http://karmelalla.com"
-mail_subject: "Новый пост на karmelalla.com:"
+mail_subject: "Заходите на karmelalla.com и читайте новый пост:"
 mail_intro: "Привет! <br><br>На этой неделе Сан Франциско был переполнен чертиками, ведьмами и ... миньонами! Проходите по ссылке и узнаете, почему все так этого ждали =)"
 mail_read_more: "читать далее..."
 mail_closing: "Пожалуйста, оставляйте свои комментарии и ставьте сердечко под постом. Буду очень ждать! <br><br>Алла"
