changed mail intro

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ exclude:
 # Email settings
 domain: "http://karmelalla.com"
 mail_subject: "Заходите на karmelalla.com и читайте новый пост:"
-mail_intro: "Привет! <br><br>На этой неделе Сан Франциско был переполнен чертиками, ведьмами и ... миньонами! Проходите по ссылке и узнаете, почему все так этого ждали =)"
+mail_intro: "Привет! <br><br>Очень хочу поделиться Калифорнийской природой. И нашими впечатлениями от поездки в великолепный Yosemite."
 mail_read_more: "читать далее..."
 mail_closing: "Пожалуйста, оставляйте свои комментарии и ставьте сердечко под постом. Буду очень ждать! <br><br>Алла"
 
