--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ exclude:
 
 # Email settings
 domain: "http://karmelalla.com"
-mail_subject: "Заходите на karmelalla.com и читайте новый пост:"
+mail_subject: "На сайте karmelalla.com новая история:"
 mail_intro: "Привет! <br><br>Очень хочу поделиться Калифорнийской природой. И нашими впечатлениями от поездки в великолепный Yosemite."
 mail_read_more: "читать далее..."
 mail_closing: "Пожалуйста, оставляйте свои комментарии и ставьте сердечко под постом. Буду очень ждать! <br><br>Алла"
