--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ exclude:
 # Email settings
 domain: "http://karmelalla.com"
 mail_subject: "На сайте karmelalla.com новая история:"
-mail_intro: "Привет! <br><br>Очень хочу поделиться Калифорнийской природой. И нашими впечатлениями от поездки в великолепный Yosemite."
+mail_intro: "Привет, дорогой друг!<br><br>В прошлые выходные мы побывали в новых для нас местах. О них я составила фотоотчет, которым буду рада поделиться."
 mail_read_more: "читать далее..."
-mail_closing: "Пожалуйста, оставляйте свои комментарии и ставьте сердечко под постом. Буду очень ждать! <br><br>Алла"
+mail_closing: "Пожалуйста, оставляй свои комментарии и ставь сердечко под постом. Буду очень ждать! <br><br>Алла"
 
 # Image settings
 image_width: 2048
