--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ exclude:
 # Email settings
 domain: "http://karmelalla.com"
 mail_subject: "На сайте karmelalla.com новая история:"
-mail_intro: "Привет, дорогой друг!<br><br>В прошлые выходные мы побывали в новых для нас местах. О них я составила фотоотчет, которым буду рада поделиться."
+mail_intro: "Привет, мой друг!<br><br>Три года назад неожиданно для себя, да и для моих родных, я начала бегать. О том, как это получилось и к чему привело, я и написала статью."
 mail_read_more: "читать далее..."
 mail_closing: "Пожалуйста, оставляй свои комментарии и ставь сердечко под постом. Буду очень ждать! <br><br>Алла"
 
