--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ exclude:
 # Email settings
 domain: "http://karmelalla.com"
 mail_subject: "На сайте karmelalla.com новая история:"
-mail_intro: "Привет, мой друг!<br><br>Три года назад неожиданно для себя, да и для моих родных, я начала бегать. О том, как это получилось и к чему привело, я написала статью."
+mail_intro: "Привет, мой друг!<br><br>Как и обещала...продолжаю про бег. "
 mail_read_more: "читать далее..."
 mail_closing: "Пожалуйста, оставляй свои комментарии и ставь сердечко под постом. Буду очень ждать!<br><br>Алла"
 
