--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ exclude:
 # Email settings
 domain: "http://karmelalla.com"
 mail_subject: "На сайте karmelalla.com новая история:"
-mail_intro: "Привет, мой друг!<br><br>Как и обещала...продолжаю про бег. "
+mail_intro: "Привет, мой друг!<br><br> Сегодня на сайте необычный пост. Моя подруга, Настя, живущая в Ванкувере решила рассказать о своей новой жизни в Канаде, про Канадцев, и, конечно, про свои впечатления."
 mail_read_more: "читать далее..."
-mail_closing: "Пожалуйста, оставляй свои комментарии и ставь сердечко под постом. Буду очень ждать!<br><br>Алла"
+mail_closing: "Пожалуйста, оставляй свои комментарии и ставь сердечко под постом. Мы с Настей будем очень ждать!<br><br>Алла"
 
 # Image settings
 image_width: 2048
