--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ domain: "http://karmelalla.com"
 mail_subject: "На сайте karmelalla.com новая история:"
 mail_intro: "Привет, мой друг!<br><br> Сегодня на сайте необычный пост. Моя подруга, Настя, живущая в Ванкувере решила рассказать о своей новой жизни в Канаде, про Канадцев, и, конечно, про свои впечатления."
 mail_read_more: "читать далее..."
-mail_closing: "Пожалуйста, оставляй свои комментарии и ставь сердечко под постом. Мы с Настей будем очень ждать!<br><br>Алла"
+mail_closing: "Пожалуйста, поддержите Настю! Оставляй свои комментарии и ставь сердечко под постом. Мы с Настей будем очень ждать!<br><br>Алла"
 
 # Image settings
 image_width: 2048
