--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
         environment:
           USER_NAME: karmelalla
           USER_EMAIL: karmelalla@gmail.com
+    branches:
+      only:
+        - master
     steps:
       - checkout
 
