--- a/_config.yml
+++ b/_config.yml
@@ -28,15 +28,6 @@ instagram_username: karmelalla
 disqus:
   shortname: lostdream-ru
 
-# Build settings
-markdown: kramdown
-theme: minima
-plugins:
-  - jekyll-paginate
-exclude:
-  - Gemfile
-  - Gemfile.lock
-
 # Email settings
 domain: "http://karmelalla.com"
 mail_subject: "На сайте karmelalla.com новая история:"
@@ -49,3 +40,16 @@ image_width: 2048
 image_small_height: 200
 image_quality: 90
 watermark: 'assets/images/watermark_karmelalla.png'
+
+# Build settings
+markdown: kramdown
+theme: minima
+plugins:
+  - jekyll-paginate
+exclude:
+  - Gemfile
+  - Gemfile.lock
+
+# tags
+tag_page_layout: tag_page
+tag_page_dir: tag
