do not show tags from hidden posts

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,9 @@ exclude:
   - vendor
   - Gemfile
   - Gemfile.lock
+  - bin
+  - CNAME
+  - README.md
 
 # Email settings
 domain: "http://karmelalla.com"
