--- a/_config.yml
+++ b/_config.yml
@@ -44,9 +44,9 @@ exclude:
 # Email settings
 domain: "http://karmelalla.com"
 mail_subject: "На сайте karmelalla.com новая история:"
-mail_intro: "Привет, мой друг!<br><br> Сегодня на сайте необычный пост. Моя подруга Настя, живущая в Ванкувере решила рассказать о своей новой жизни в Канаде, про Канадцев, и, конечно, про свои впечатления."
+mail_intro: "Привет, мой самый лучший читатель!<br><br> Поздравляю тебя с Новым Годом! Поздравления поздние, но очень искренние. Спасибо, что провёл весь прошлый год со мной. Свою новую историю я решила посвятить тому, что же мне удалось достигнуть за 2017 год."
 mail_read_more: "читать далее..."
-mail_closing: "Пожалуйста, поддержите Настю! Оставляй свои комментарии и ставь сердечко под постом. Мы с Настей будем очень ждать!<br><br>Алла"
+mail_closing: "Я желаю тебе исполнения всех желаний, главное не забывай их правильно загадывать.<br><br>С любовью,<br>Алла"
 
 # Image settings
 image_width: 2048
