--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email: karmelalla@gmail.com
 timezone: "America/Los_Angeles"
 permalink: /:categories/:title
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://karmelalla.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://karmelalla.com" # the base hostname & protocol for your site, e.g. http://example.com
 lang: "ru"
 excerpt_separator: "<!--separate-->"
 facebook_username: karmelalla
