--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ exclude:
 # Email settings
 domain: "http://karmelalla.com"
 mail_subject: "На сайте karmelalla.com новая история:"
-mail_intro: "Привет, мой самый лучший читатель!<br><br> Поздравляю тебя с Новым Годом! Поздравления поздние, но очень искренние. Спасибо, что провёл весь прошлый год со мной. Свою новую историю я решила посвятить тому, что же мне удалось достигнуть за 2017 год."
+mail_intro: "Привет, мой самый лучший читатель!<br><br> Поздравляю тебя с Новым Годом! Поздравление позднее, но очень искреннее. Спасибо, что провёл весь прошлый год со мной. Свою новую историю я решила посвятить тому, что же мне удалось достигнуть в 2017 году."
 mail_read_more: "читать далее..."
 mail_closing: "Я желаю тебе исполнения всех желаний, главное не забывай их правильно загадывать.<br><br>С любовью,<br>Алла"
 
