--- a/_config.yml
+++ b/_config.yml
@@ -44,9 +44,9 @@ exclude:
 # Email settings
 domain: "http://karmelalla.com"
 mail_subject: "На сайте karmelalla.com новая история:"
-mail_intro: "Привет, мой самый лучший читатель!<br><br> Поздравляю тебя с Новым Годом! Поздравление позднее, но очень искреннее. Спасибо, что провёл весь прошлый год со мной. Свою новую историю я решила посвятить тому, что же мне удалось достигнуть в 2017 году."
+mail_intro: "Привет, друг!<br><br>В прошлом году у меня сбылась еще одна мечта - мы побывали в парке развлечений Universal Studios и доехали практически до самой Мексики.<i>"
 mail_read_more: "читать далее..."
-mail_closing: "Я желаю тебе исполнения всех желаний, главное не забывай их правильно загадывать.<br><br>С любовью,<br>Алла"
+mail_closing: "</i>Переходи по ссылке и отправляйся в путешествие вместе с нами!<br><br>С любовью,<br>Алла"
 
 # Image settings
 image_width: 2048
