--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ exclude:
 # Email settings
 domain: "http://karmelalla.com"
 mail_subject: "На сайте karmelalla.com новая история:"
-mail_intro: "Привет, друг!<br><br>В прошлом году у меня сбылась еще одна мечта - мы побывали в парке развлечений Universal Studios и доехали практически до самой Мексики.<i>"
+mail_intro: "Привет, мой друг!<br><br>Надеюсь, что ты не забыл про меня, ведь я давно не писала. Сегодня же я решила порадовать рассказом об одной из наших самых спонтанных и необычных поездок по Калифорнии.<i>"
 mail_read_more: "читать далее..."
 mail_closing: "</i>Переходи по ссылке и отправляйся в путешествие вместе с нами!<br><br>С любовью,<br>Алла"
 
